--- a/ex001.html
+++ b/ex001.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning JavaScript</title>
-    <link rel="stylesheet" href="ex.001.css">
+    <link rel="stylesheet" href="ex001.css">
 </head>
 
 <body>
