--- a/ex001.html
+++ b/ex001.html
@@ -11,11 +11,10 @@
 
 <body>
     <h1>JavaScript</h1>
-    <p>Learning JS!</p>
+    <p>Learning JS!</p> <!-- comentário em html -->
     <script>
-        window.alert("My First Message!")
-        window.confirm("Are you enjoying JS?")
-        window.prompt("what's your name?")
+        var name = window.prompt("what's your name?") // comentário em js
+        window.alert("Nice to meet you," + name) //concatenação
     </script>
 </body>
 
