--- a/ex001.html
+++ b/ex001.html
@@ -11,11 +11,21 @@
 
 <body>
     <h1>JavaScript</h1>
-    <p>Learning JS!</p> <!-- comentário em html -->
+    <p>Learning JS!</p> <!-- comment html -->
     <script>
-        var name = window.prompt("what's your name?") // comentário em js
-        window.alert("Nice to meet you," + name) //concatenação
+        var name = window.prompt("what's your name?") // comment js
+        window.alert("Nice to meet you," + name) //concatenation
+
+        var n1 = Number(window.prompt("Write a number")) //string
+        var n2 = Number(window.prompt("write other number"))//sring
+        var s = n1 + n2
+        window.alert("the sum of your numbers is " + s)//concatenation
+        // (number + number) to sum
+        // (string + string) to concatenation
+
     </script>
+
+
 </body>
 
 </html>
