creating other exercise

--- a/firstJS/ex001.html
+++ b/firstJS/ex001.html
@@ -19,7 +19,7 @@
         var n1 = Number(window.prompt("Write a number")) //string
         var n2 = Number(window.prompt("write other number"))//sring
         var s = n1 + n2
-        window.alert("the sum of your numbers is " + s)//concatenation
+        window.alert(`the sum of ${n1} and ${n2} is ` + s)//concatenation and template string
         // (number + number) to sum
         // (string + string) to concatenation
 
