--- a/SecondJs/ex002.html
+++ b/SecondJs/ex002.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="ex002.css">
     <title>Document</title>
 </head>
 
 <body>
 
+
+    <script>
+        var name = window.prompt("What's your name?")
+        document.write(`Olá, <strong>${name}</strong>!  Your name have ${name.length} letters.`)
+    </script>
 </body>
 
 </html>
