--- a/SecondJs/ex002.html
+++ b/SecondJs/ex002.html
@@ -14,7 +14,8 @@
 
     <script>
         var name = window.prompt("What's your name?")
-        document.write(`Olá, <strong>${name}</strong>!  Your name have ${name.length} letters.`)
+        document.write(`Olá, <strong>${name}</strong>!  Your name have ${name.length} letters. <br>`)
+        document.write(`Your name in uppercase is ${name.toUpperCase()}.`)
     </script>
 </body>
 
