--- a/ThirdJs/ex003.html
+++ b/ThirdJs/ex003.html
@@ -13,7 +13,7 @@
     <h1>Starting my study with DOM</h1>
     <p>Here goes the result</p>
     <p>Learning how to use <strong>DOM</strong> in JavaScript</p>
-    <div>Click me</div>
+    <div id="msg">Click me</div>
     <script type="text/javascript" src="ex003.js"></script>
 </body>
 
