--- a/FourthJs/ex004.html
+++ b/FourthJs/ex004.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="ex.004.css">
+    <title>Events DOM</title>
 </head>
 
 <body>
-
+    <div id="area">
+        Interact...
+    </div>
+    <script type="text/javascript" src="ex004.js"></script>
 </body>
 
 </html>
