--- a/JS8/ex012.html
+++ b/JS8/ex012.html
@@ -6,15 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ex012.css">
-    <title>Document</title>
+    <title>Modelo de exercício</title>
 </head>
 
 <body>
     <header>
-
+        <h1>título</h1>
     </header>
+    <section>
+        <div>
+            testando
+        </div>
+        <div>
+            testando
+        </div>
+    </section>
     <footer>
-
+        <p>&copy;cursoemvideo</p>
     </footer>
     <script type="text/javascript" src="ex012.js"></script>
 </body>
