doing morning part

--- a/JS8/ex012.html
+++ b/JS8/ex012.html
@@ -11,14 +11,15 @@
 
 <body>
     <header>
-        <h1>título</h1>
+        <h1>Time of the day</h1>
     </header>
     <section>
-        <div>
-            testando
+        <div id="msg">
+            aqui vai aparecer a hr
         </div>
-        <div>
-            testando
+        <div id="photo">
+            <img id="img" style="border-radius: 50%" width="250" height="250" src="imgs/morning.jpg"
+                alt=" morning photo ">
         </div>
     </section>
     <footer>
