--- a/JS8/ex012.html
+++ b/JS8/ex012.html
@@ -9,7 +9,7 @@
     <title>Modelo de exercício</title>
 </head>
 
-<body>
+<body onload="charge()">
     <header>
         <h1>Time of the day</h1>
     </header>
@@ -18,8 +18,10 @@
             aqui vai aparecer a hr
         </div>
         <div id="photo">
-            <img id="img" style="border-radius: 50%" width="250" height="250" src="imgs/morning.jpg"
-                alt=" morning photo ">
+            <img id="img" style="border-radius: 50%" width="250" height="250" src="imgs/morning.png"
+                alt=" morningphoto ">
+
+
         </div>
     </section>
     <footer>
